--- a/entrega 2/entrega-bd-02-72/E2-report-72.ipynb
+++ b/entrega 2/entrega-bd-02-72/E2-report-72.ipynb
@@ -330,14 +330,14 @@
         "]\n",
         "\n",
         "  - marcar_consulta(clinica): Regista uma marcação de uma consulta na base de dados (populando na respectiva tabela). Recebe como argumentos um paciente, um médico, e uma data e hora (posteriores ao momento de agendamento).\n",
-        "Exemplo de link: /registar?medico=189068288&paciente=440067100120&data=2024-06-07&hora=10:00\n",
+        "Exemplo de link: /registar/?medico=189068288&paciente=440067100120&data=2024-06-07&hora=10:00\n",
         "Exemplo de output: {\n",
         "  \"msg\": \"Consulta marcada com sucesso\",\n",
         "  \"success\": true\n",
         "}\n",
         "\n",
         "  - cancelar_consulta(clinica): Cancela uma marcação de consulta que ainda não se realizou (o seu horário é posterior ao momento do cancelamento), removendo a entrada da respectiva tabela na base de dados. Recebe como argumentos um paciente, um médico, e uma data e hora.\n",
-        "Exemplo de link: /cancelar?medico=129141777&paciente=22914177763&data=\"2024-06-08\"&hora=\"10:00\"\n",
+        "Exemplo de link: /cancelar/?medico=129141777&paciente=22914177763&data=\"2024-06-08\"&hora=\"10:00\"\n",
         "Exemplo de output: {\n",
         "  \"msg\": \"Consulta cancelada com sucesso\",\n",
         "  \"success\": true\n",
@@ -349,7 +349,7 @@
       "id": "97f45cec-fe42-418a-b85d-c9e51807a42c",
       "metadata": {},
       "source": [
-        "## 3. Vistas\n",
+        "## 4. Vistas\n",
         "\n",
         "Crie uma vista materializada que detalhe as informações mais importantes sobre as consultas dos pacientes, combinando a informação de várias tabelas da base de dados. A vista deve ter o seguinte esquema:\n",
         "\n",
@@ -436,32 +436,6 @@
       "metadata": {},
       "source": [
         "1. Determinar que paciente(s) tiveram menos progresso no tratamento das suas doenças do foro ortopédico para atribuição de uma consulta gratuita. Considera-se que o indicador de falta de progresso é o intervalo temporal máximo entre duas observações do mesmo sintoma (i.e. registos de tipo ‘observacao’ com a mesma chave e com valor NULL) em consultas de ortopedia."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "bf12ce01-15c0-4e7c-b329-576dd344ebf6",
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "%%sql\n",
-        "\n",
-        "WITH intervalos_temporais AS (\n",
-        "    SELECT\n",
-        "        h.ssn,\n",
-        "        p.nome,\n",
-        "        MAX(h.data) - MIN(h.data) AS intervalo_temporal\n",
-        "    FROM historial_paciente AS h\n",
-        "    JOIN paciente AS p ON h.ssn = p.ssn\n",
-        "    WHERE h.especialidade = 'ortopedia' AND h.tipo = 'observacao' AND h.valor IS NULL\n",
-        "    GROUP BY h.ssn, p.nome, h.chave\n",
-        ")\n",
-        "SELECT r.ssn, r.nome, r.intervalo_temporal\n",
-        "FROM intervalos_temporais AS r\n",
-        "WHERE r.intervalo_temporal = (SELECT MAX(intervalo_temporal) FROM intervalos_temporais);"
       ]
     },
     {
@@ -593,7 +567,7 @@
         "GROUP BY ROLLUP(parametro, h.especialidade, nome_medico, clinica)\n",
         "ORDER BY\n",
         "    parametro,\n",
-        "    h.especialidade,\n",
+        "    h.especialidade NULLS FIRST,\n",
         "    nome_medico NULLS FIRST,\n",
         "    clinica NULLS FIRST;"
       ]
@@ -659,7 +633,7 @@
       "source": [
         "### Justificação\n",
         "\n",
-        "Para otimizar a query acima, primeiro optámos por um índice composto do tipo B-tree sobre a tabela *observacao*, com as colunas *parametro* e *valor*. A ordem das colunas é relevante e escolhemos a coluna *parametro* como primeira coluna do índice por ser a coluna que é filtrada segundo uma igualdade. A criação deste índice evita fazer um Seq Scan na tabela *observacao* e permite fazer um Bitmap Index Scan utilizando o índice composto criado, que acaba por ser mais eficiente. Entendemos no entanto que a criação de um índice individual sobre uma das colunas filtradas também seria uma opção válida e ao optarmos por um índice composto temos um trade-off entre a eficiência da query acima e a eficiência na inserção/atualização/deleção de registos na tabela *observacao*.\n",
+        "Para otimizar a query acima, primeiro optámos por um índice composto do tipo B-tree sobre a tabela *observacao*, com as colunas *parametro* e *valor*. A ordem das colunas é relevante e escolhemos a coluna *parametro* como primeira coluna do índice por ser a coluna que é filtrada segundo uma igualdade. A criação deste índice evita fazer um Seq Scan na tabela *observacao* e permite fazer um Bitmap Index Scan utilizando o índice composto criado, que acaba por ser mais eficiente. Entendemos no entanto que a criação de um índice individual sobre uma das colunas filtradas também seria uma opção válida e ao optarmos por um índice composto temos um trade-off entre a eficiência da query acima e a eficiência na inserção/atualização/deleção de registos na tabela *observacao*.  \n",
         "Finalmente, criámos um índice do tipo Hash sobre a coluna *ssn* da tabela *consulta* de forma a otimizar o JOIN da tabela *paciente* com a tabela *consulta*.\n",
         "Não criámos um índice sobre a coluna *id* da tabela *observacao* porque esta tabela tem colunas que são filtradas na query e por isso não se justificava a criação de um índice com vista a otimizar um JOIN."
       ]
@@ -708,10 +682,10 @@
       "source": [
         "### Justificação\n",
         "\n",
-        "Para otimizar a query acima, primeiro optámos por um índice do tipo B-tree sobre a coluna *data* da tabela *consulta* de forma a otimizar o processo de filtragem. A criação deste índice evita fazer um Seq Scan na tabela *consulta* e permite fazer um Index Scan utilizando o índice criado, que acaba por ser mais eficiente. \n",
-        "Depois optámos por um índice do tipo Hash sobre a coluna *especialidade* da tabela *medico* de forma a tornar mais eficiente a agregação.\n",
-        "Finalmente, também criámos um índice do tipo Hash sobre a coluna *codigo_sns* da tabela *receita* de forma a otimizar o JOIN da tabela *consulta* com a tabela *receita*.\n",
-        "Não criámos um índice sobre a coluna *nif* da tabela *consulta* porque esta tabela possui a coluna que é filtradas na query e por isso não se justificava a criação de um índice com vista a otimizar um JOIN.\n",
+        "Para otimizar a query acima, primeiro optámos por um índice do tipo B-tree sobre a coluna *data* da tabela *consulta* de forma a otimizar o processo de filtragem. A criação deste índice evita fazer um Seq Scan na tabela *consulta* e permite fazer um Index Scan utilizando o índice criado, que acaba por ser mais eficiente.  \n",
+        "Depois optámos por um índice do tipo Hash sobre a coluna *especialidade* da tabela *medico* de forma a tornar mais eficiente a agregação.  \n",
+        "Finalmente, também criámos um índice do tipo Hash sobre a coluna *codigo_sns* da tabela *receita* de forma a otimizar o JOIN da tabela *consulta* com a tabela *receita*.  \n",
+        "Não criámos um índice sobre a coluna *nif* da tabela *consulta* porque esta tabela possui a coluna que é filtradas na query e por isso não se justificava a criação de um índice com vista a otimizar um JOIN.  \n",
         "Também decidimos não criar um índice sobre a coluna *quantidade* da tabela *receita* apesar de o ORDER BY ser realizado sobre *qtd* já que *qtd* não é diretamente um valor de uma coluna da tabela mas um valor calculado a partir de uma agregação, daí não se justificar a criação do índice."
       ]
     }
