Pequenos detalhes no relatório - app

--- a/entrega 2/entrega-bd-02-72/E2-report-72.ipynb
+++ b/entrega 2/entrega-bd-02-72/E2-report-72.ipynb
@@ -302,46 +302,68 @@
         "- **app.py**\n",
         "\n",
         "  - clinicas(): Lista todas as clinicas fornecendo o nome e a morada de cada clínica.\n",
-        "Exemplo de output: [[\"Clinica A\", \"Morada 1\" ], [\"Clinica B\", \"Morada 2\" ]]\n",
+        "  \n",
+        "  *Exemplo de output:*\n",
+        "  ```json\n",
+        "  [[\"Clinica A\", \"Morada 1\" ], [\"Clinica B\", \"Morada 2\" ]]\n",
+        "  ```\n",
         "\n",
         "  - clinica_especilidades(clinica): Retorna a lista de especialidades dos médicos que trabalham numa certa clínica.\n",
-        "Exemplo de output: [\"cardiologia\", \"ortopedia\"]\n",
+        "  \n",
+        "  *Exemplo de output:*\n",
+        "  ```json\n",
+        "  [\"cardiologia\", \"ortopedia\"]\n",
+        "  ```\n",
         "\n",
         "  - clinica_medicos(clinica, especilidade): Retorna uma lista de médicos, dando a informação do nome, nif e os próximos 3 horários disponíveis do respetivo médico nessa mesma clínica.\n",
-        "Exemplo de output: [\n",
+        "  \n",
+        "  *Exemplo de output:*\n",
+        "  ```json\n",
+        "  [\n",
+        "    {\n",
+        "      \"horarios\": [\n",
+        "        {\n",
+        "          \"dia\": \"2024-06-02\",\n",
+        "          \"hora\": \"08:00\"\n",
+        "        },\n",
+        "        {\n",
+        "          \"dia\": \"2024-06-02\",\n",
+        "          \"hora\": \"08:30\"\n",
+        "        },\n",
+        "        {\n",
+        "          \"dia\": \"2024-06-02\",\n",
+        "          \"hora\": \"09:00\"\n",
+        "        }\n",
+        "      ],\n",
+        "      \"nif\": \"203396217\",\n",
+        "      \"nome\": \"Clara Nunes\"\n",
+        "    }\n",
+        "  ]\n",
+        "  ```\n",
+        "\n",
+        "  - marcar_consulta(clinica): Regista uma marcação de uma consulta, se possível, na base de dados na tabela clinica. Recebe como argumentos um paciente, um médico, e uma data e hora (posterior ao momento da interrogação).\n",
+        "  \n",
+        "  *Exemplo de link:* ``/registar/?medico=189068288&paciente=440067100120&data=2024-06-07&hora=10:00``\n",
+        "  \n",
+        "  *Exemplo de output:* \n",
+        "  ```json\n",
         "  {\n",
-        "    \"horarios\": [\n",
-        "      {\n",
-        "        \"dia\": \"2024-06-02\",\n",
-        "        \"hora\": \"08:00\"\n",
-        "      },\n",
-        "      {\n",
-        "        \"dia\": \"2024-06-02\",\n",
-        "        \"hora\": \"08:30\"\n",
-        "      },\n",
-        "      {\n",
-        "        \"dia\": \"2024-06-02\",\n",
-        "        \"hora\": \"09:00\"\n",
-        "      }\n",
-        "    ],\n",
-        "    \"nif\": \"203396217\",\n",
-        "    \"nome\": \"Clara Nunes\"\n",
+        "    \"msg\": \"Consulta marcada com sucesso\",\n",
+        "    \"success\": true\n",
         "  }\n",
-        "]\n",
+        "  ```\n",
         "\n",
-        "  - marcar_consulta(clinica): Regista uma marcação de uma consulta na base de dados (populando na respectiva tabela). Recebe como argumentos um paciente, um médico, e uma data e hora (posteriores ao momento de agendamento).\n",
-        "Exemplo de link: /registar/?medico=189068288&paciente=440067100120&data=2024-06-07&hora=10:00\n",
-        "Exemplo de output: {\n",
-        "  \"msg\": \"Consulta marcada com sucesso\",\n",
-        "  \"success\": true\n",
-        "}\n",
-        "\n",
-        "  - cancelar_consulta(clinica): Cancela uma marcação de consulta que ainda não se realizou (o seu horário é posterior ao momento do cancelamento), removendo a entrada da respectiva tabela na base de dados. Recebe como argumentos um paciente, um médico, e uma data e hora.\n",
-        "Exemplo de link: /cancelar/?medico=129141777&paciente=22914177763&data=\"2024-06-08\"&hora=\"10:00\"\n",
-        "Exemplo de output: {\n",
-        "  \"msg\": \"Consulta cancelada com sucesso\",\n",
-        "  \"success\": true\n",
-        "}"
+        "  - cancelar_consulta(clinica): Cancela uma marcação de consulta que ainda não foi realizada, removendo a entrada da respectiva tabela na base de dados. Recebe como argumentos um paciente, um médico, e uma data e hora (posterior ao momento da interrogação).\n",
+        "  \n",
+        "  *Exemplo de link:* ``/cancelar/?medico=129141777&paciente=22914177763&data=\"2024-06-08\"&hora=\"10:00\"``\n",
+        "  \n",
+        "  *Exemplo de output:*\n",
+        "  ```json\n",
+        "  {\n",
+        "    \"msg\": \"Consulta cancelada com sucesso\",\n",
+        "    \"success\": true\n",
+        "  }\n",
+        "  ```"
       ]
     },
     {
